--- a/content/docs/framework/index.mdx
+++ b/content/docs/framework/index.mdx
@@ -31,10 +31,10 @@ La Ciberseguridad no se trata solo de defensa o ataque — se trata de respeto m
 ## 📋 Secciones
 
 <Cards>
-  <Card icon={<Shield />} href="/docs/kudo#-dominios" title="Dominios Kudo">
+  <Card icon={<Shield />} href="/framework/dominios" title="Dominios Kudo">
     Conoce la foto inicial y prinicipal.
   </Card>
-  <Card icon={<FileText />} href="/docs/kudo/politicas" title="Políticas Templates">
+  <Card icon={<FileText />} href="/politicas" title="Políticas Templates">
     Información base para iniciar.
   </Card>
 </Cards>
