chore: prepare for v0.1.0 release

--- a/content/docs/framework/index.mdx
+++ b/content/docs/framework/index.mdx
@@ -160,7 +160,7 @@ import { Accordion, Accordions } from 'fumadocs-ui/components/accordion';
         - Ejemplo: 2025-Q2 (versión inicial del segundo trimestre de 2025)
   </Accordion>
   <Accordion title="Control de Cambios">
-    El control de cambios se realiza de manera continua con trazabilidad a través del flujo de git; específicamente mediante Pull Requests (PR), que pueden validarse en el siguiente [repositorio](https://github.com/PetterVargas/divisioncero-docs). En la parte superior derecha del sitio web hay un enlace directo.
+    El control de cambios se realiza de manera continua con trazabilidad a través del flujo de git; específicamente mediante Pull Requests (PR), que pueden validarse en el siguiente [repositorio](https://github.com/PetterVargas/kudo). En la parte superior derecha del sitio web hay un enlace directo.
   </Accordion>
   <Accordion title="Alcance">
     Buscamos que el alcance de este proyecto sea amplio y que su aplicabilidad en cada contexto sea general, no segmentada. Por lo tanto, cada documento está pensado para ser aplicable a cualquier contexto y no solo a uno específico.
