--- a/content/docs/framework/index.mdx
+++ b/content/docs/framework/index.mdx
@@ -20,6 +20,47 @@ La fórmula es simple:
 </Callout>
 
 
+## 🚀 Instalación Rápida
+
+Crea tu aplicación Kudo en segundos con nuestro CLI interactivo:
+
+```bash tab="pnpm"
+pnpm create @divisioncero/kudo-app
+```
+
+```bash tab="npm"
+npm create @divisioncero/kudo-app
+```
+
+```bash tab="yarn"
+yarn create @divisioncero/kudo-app
+```
+
+### Próximos pasos después de la instalación:
+
+```bash tab="pnpm"
+cd tu-proyecto
+pnpm install
+pnpm dev
+```
+
+```bash tab="npm"
+cd tu-proyecto
+npm install
+npm run dev
+```
+
+```bash tab="yarn"
+cd tu-proyecto
+yarn install
+yarn dev
+```
+
+Tu aplicación estará disponible en [http://localhost:3000](http://localhost:3000)
+
+---
+
+
 ## 🛡️ Política de Ciberseguridad
 
 <Callout type="success">
